WIP: added ef core
-Added db generation
-Added models

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
   "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultDbConnection": "Data Source=./;Initial Catalog=Marketdb;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
