WIP: fixed db name

--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "DetailedErrors": true,
   "ConnectionStrings": {
-    "DefaultDbConnection": "Data Source=./;Initial Catalog=Marketdb;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultDbConnection": "Data Source=./;Initial Catalog=Client;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
