--- a/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
+++ b/ZAGSWEB/MOGILEVZAGS/MOGILEVZAGS/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "DetailedErrors": true,
   "ConnectionStrings": {
-    "DefaultDbConnection": "Data Source=./;Initial Catalog=Client;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultDbConnection": "Data Source=ANRLT\\SQLEXPRESS;Initial Catalog=Client;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "Logging": {
