--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# local configs
+appsettings.*Personal*.json
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
